fix(front): fix overflowing list

--- a/front/src/pages/UserZone/MyReservations/MyReservations.less
+++ b/front/src/pages/UserZone/MyReservations/MyReservations.less
@@ -8,9 +8,12 @@
     &-content {
         .editing-panel-content();
 
-        h2 {
-            margin-bottom: 0;
+        &-list {
+            h2 {
+                margin-block-end: 0;
+            }
         }
+
 
         &-section {
             &:not(:first-child) {
